# torch-kinetics

./: LICENSE  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
examples/: profiling_model.ipynb  restore_kinetics_model.ipynb  restoring_model.ipynb
tests/: test_models.py  test_reactions.py
torch_kinetics/: models.py  plotting.py  reactions.py
