[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-kinetics"
authors = [
    {name = "Max Lefarov", email = "mlefarov@gmail.com"},
]
description = "Implementation of Enzyme Kinetics Model in PyTorch with support of auto-differentiation."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["bioinformatics", "system-biology", "ml"]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: PyTorch",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "torch>=2.0",
    "torchdiffeq>=0.2",
    "numpy>=1.25",
    "matplotlib>=3.7",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "kinetics>=1.4.3",
    "pytest==7.4.0",
    "black==23.7.0",
    "isort==5.12.0",
]